--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -6,7 +6,7 @@
     profile.ULTRA    = SHADOW_QUALITY=3 shadowDistance=256.0 ENTITY_SHADOWS CLOUD_QUALITY=3 WATER_QUALITY=2 REFLECTION_QUALITY=3 LIGHTSHAFT_QUALITY=4 SSAO
 
 #Screen Setup
-    screen=<empty> <empty> CMPR RP_MODE <empty> <empty> [PERFORMANCE_SETTINGS] [PREFERENCE_SETTINGS]
+    screen=<empty> <empty> CMPR RP_MODE <empty> <empty> [PERFORMANCE_SETTINGS] [PREFERENCE_SETTINGS] [SNOW_SETTINGS]
     
     screen.PERFORMANCE_SETTINGS=<empty> <empty> <profile> <empty> <empty> <empty> CLOUD_QUALITY WATER_QUALITY REFLECTION_QUALITY LIGHTSHAFT_QUALITY SHADOW_QUALITY shadowDistance ENTITY_SHADOWS SSAO
 
@@ -20,8 +20,9 @@
             screen.CLOUD_SETTINGS=<empty> <empty> CLOUD_SHADOWS SECOND_CLOUD_LAYER CLOUD_ALT1 CLOUD_ALT2
         screen.LIGHTING_SETTINGS=<empty> <empty> BLOCKLIGHT_COLOR_MODE HELD_LIGHTING_MODE PIXEL_SHADOW MINIMUM_LIGHT_MODE
         screen.OTHER_SETTINGS=<empty> <empty> WORLD_OUTLINE HAND_SWAYING SELECTION_OUTLINE SHOW_LIGHT_LEVEL LESS_LAVA_FOG
+        screen.SNOW_SETTINGS=<empty> <empty> SNOW_NOISE_TYPE SNOW_NOISE_INTENSITY SNOW_SIZE
 #Set Sliders
-    sliders=shadowDistance BLOOM_STRENGTH CLOUD_ALT1 CLOUD_ALT2 T_EXPOSURE T_WHITE_CURVE T_LOWER_CURVE T_UPPER_CURVE T_SATURATION T_VIBRANCE MOTION_BLURRING_STRENGTH
+    sliders=shadowDistance BLOOM_STRENGTH CLOUD_ALT1 CLOUD_ALT2 T_EXPOSURE T_WHITE_CURVE T_LOWER_CURVE T_UPPER_CURVE T_SATURATION T_VIBRANCE MOTION_BLURRING_STRENGTH SNOW_SIZE SNOW_NOISE_INTENSITY
 
 #Pipeline Settings
     clouds=off
