--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -20,10 +20,13 @@
 #1.13 And Above Mapping:
 
 block.10000=big_dripleaf_stem big_dripleaf small_dripleaf
-block.10004=grass fern oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling bamboo_sapling dead_bush dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose sweet_berry_bush wheat carrots potatoes beetroots pumpkin_stem melon_stem nether_sprouts warped_roots crimson_roots sunflower:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower large_fern:half=lower
+block.10004=grass fern oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling bamboo_sapling dead_bush dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley sweet_berry_bush wheat carrots potatoes beetroots pumpkin_stem melon_stem nether_sprouts warped_roots crimson_roots sunflower:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower large_fern:half=lower
+block.10005=wither_rose
+block.10006=red_mushroom brown_mushroom
 block.10008=oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves azalea_leaves flowering_azalea_leaves mangrove_leaves
 block.10012=vine
-block.10016=attached_pumpkin_stem attached_melon_stem mangrove_propagule seagrass tall_seagrass kelp_plant kelp hanging_roots sugar_cane cobweb spore_blossom
+block.10016=attached_pumpkin_stem attached_melon_stem hanging_roots sugar_cane cobweb spore_blossom
+block.10017=mangrove_propagule seagrass tall_seagrass kelp_plant kelp
 block.10020=sunflower:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper large_fern:half=upper
 block.10024=
 block.10028=hay_block
@@ -51,7 +54,9 @@ block.10112=polished_deepslate deepslate_bricks cracked_deepslate_bricks deepsla
 block.10116=calcite
 block.10120=dripstone_block pointed_dripstone daylight_detector
 block.10124=grass_block:snowy=true podzol:snowy=true mycelium:snowy=true
-block.10128=dirt coarse_dirt rooted_dirt podzol:snowy=false mycelium:snowy=false dirt_path farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
+block.10128=dirt coarse_dirt rooted_dirt podzol:snowy=false farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
+block.10129=mycelium:snowy=false
+block.10130=dirt_path
 block.10132=grass_block:snowy=false
 block.10136=farmland:moisture=7
 block.10140=netherrack
