--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -20,9 +20,9 @@
             screen.CLOUD_SETTINGS=<empty> <empty> CLOUD_SHADOWS SECOND_CLOUD_LAYER CLOUD_ALT1 CLOUD_ALT2
         screen.LIGHTING_SETTINGS=<empty> <empty> BLOCKLIGHT_COLOR_MODE HELD_LIGHTING_MODE PIXEL_SHADOW MINIMUM_LIGHT_MODE
         screen.OTHER_SETTINGS=<empty> <empty> WORLD_OUTLINE HAND_SWAYING SELECTION_OUTLINE SHOW_LIGHT_LEVEL LESS_LAVA_FOG
-        screen.SNOW_SETTINGS=<empty> <empty> SNOW_NOISE_INTENSITY SNOW_SIZE SNOW_TRANSPARENCY COLOR_DESATURATION
+        screen.SNOW_SETTINGS=<empty> <empty> SNOW_NOISE_INTENSITY SNOW_SIZE SNOW_TRANSPARENCY COLOR_DESATURATION MELTING_RADIUS
 #Set Sliders
-    sliders=shadowDistance BLOOM_STRENGTH CLOUD_ALT1 CLOUD_ALT2 T_EXPOSURE T_WHITE_CURVE T_LOWER_CURVE T_UPPER_CURVE T_SATURATION T_VIBRANCE MOTION_BLURRING_STRENGTH SNOW_SIZE SNOW_NOISE_INTENSITY SNOW_TRANSPARENCY COLOR_DESATURATION
+    sliders=shadowDistance BLOOM_STRENGTH CLOUD_ALT1 CLOUD_ALT2 T_EXPOSURE T_WHITE_CURVE T_LOWER_CURVE T_UPPER_CURVE T_SATURATION T_VIBRANCE MOTION_BLURRING_STRENGTH SNOW_SIZE SNOW_NOISE_INTENSITY SNOW_TRANSPARENCY COLOR_DESATURATION MELTING_RADIUS
 
 #Pipeline Settings
     clouds=off
